# ActionTest

./: .gitignore  ActionTest.sln  README.md  RELEASE_NOTES.md  buildnative.sh  paket.dependencies
.github/workflows/: native.yml
src/GithubActionTesting/: GithubActionTesting.fsproj  Program.fs
src/Native/: CMakeLists.txt  test.cpp
src/Test/: Program.fs  Test.fsproj  paket.references
